Fixed misalignment of docent selection on /projecten/

--- a/html/css/panel.css
+++ b/html/css/panel.css
@@ -48,6 +48,7 @@ main>div>p:first-of-type {
   margin: 0;
 }
 
+
 .inputParent {
   border: 1px #000 solid;
   padding: 16px;
@@ -61,16 +62,19 @@ main>div>p:first-of-type {
 .col_2, .col_3, .col_1 {
   width: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 
 .col_1 {
   grid-template-columns: 1fr;
-  padding: 2px;
 }
 
+.col_1, button {
+  margin: 0 4px 0 0;
+}
+
+padding: 2px;
 .col_2 span, .col_3 span {
-  padding: 2px;
+  grid-template-columns: 1fr 1fr;
 }
 
 .col_3 {
@@ -81,6 +85,10 @@ main>div>p:first-of-type {
   width: 100%;
   font-size: 1em;
   padding: 4px 8px;
+}
+.dropSelect {
+  display: block;
+  width: auto;
 }
 
 .buttonContaier {
